[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Milo/SunStaff.gd" type="Script" id=1]
[ext_resource path="res://Art/Misc/lightRadiuswBlur.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=29]
radius = 506.0

[node name="SunStaff" type="Node2D"]
position = Vector2( 168, 18 )
scale = Vector2( 2, 2 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
mode = 3

[node name="LightCircle" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightCircle"]
shape = SubResource( 29 )

[connection signal="area_entered" from="LightCircle" to="LightCircle" method="_on_LightCircle_area_entered"]
[connection signal="area_exited" from="LightCircle" to="LightCircle" method="_on_LightCircle_area_exited"]
[connection signal="body_entered" from="LightCircle" to="LightCircle" method="_on_LightCircle_body_entered"]
[connection signal="body_exited" from="LightCircle" to="LightCircle" method="_on_LightCircle_body_exited"]
